--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
     <p>&copy; 2025 Plankster. All rights reserved. Meme responsibly.</p>
   </footer>
 
-  <!-- External JavaScript Libraries & Main App JS -->
-  <!-- We'll add Three.js and our main script next step -->
-  <script src="three.min.js"></script>
+  <!-- Include Three.js from a CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js"></script>
+  <!-- Include the GLTFLoader from the examples folder (CDN) -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/examples/js/loaders/GLTFLoader.js"></script>
+  
+  <!-- Your main JS file -->
   <script src="app.js"></script>
 </body>
 </html>
