--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Plankster ($PLNK) – Edgy Meme Experience</title>
   <!-- CSS Placeholder -->
   <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
   <!-- Header / Branding Section -->
