--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/examples/js/loaders/GLTFLoader.js"></script>
   
   <!-- Your main JS file -->
-  <script src="app.js"></script>
+  <script type="module" src="/app.js"></script>
 </body>
 </html>
