--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <section id="3d-scene">
       <h2>Meet Plankster</h2>
       <!-- This canvas is where Three.js will render our 3D plank -->
-      <canvas id="planksterCanvas"></canvas>
+      <div id="three-container"></div>
+      <script type="module" src="./src/main.js"></script>
       <div id="infoOverlay">
         <!-- Overlay text or stats (e.g., current level, mood, etc.) -->
         <p><strong>Plankster Level:</strong> <span id="plankLevel">1</span></p>
