--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Plankster ($PLNK) – Edgy Meme Experience</title>
-  <!-- CSS Placeholder -->
+  <meta charset="UTF-8">
+  <title>Plankster ($PLNK)</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Header / Branding Section -->
   <header>
     <h1>Plankster ($PLNK)</h1>
     <nav>
@@ -20,22 +17,16 @@
     </nav>
   </header>
 
-  <!-- Main Content -->
   <main>
-    <!-- 3D Scene Container -->
     <section id="3d-scene">
       <h2>Meet Plankster</h2>
-      <!-- This canvas is where Three.js will render our 3D plank -->
-      <div id="three-container"></div>
-      <script type="module" src="./src/main.js"></script>
+      <canvas id="planksterCanvas"></canvas>
       <div id="infoOverlay">
-        <!-- Overlay text or stats (e.g., current level, mood, etc.) -->
         <p><strong>Plankster Level:</strong> <span id="plankLevel">1</span></p>
         <p><strong>Mood:</strong> <span id="plankMood">Chill</span></p>
       </div>
     </section>
 
-    <!-- Interaction Controls -->
     <section id="plankster-interactions">
       <h2>Edgy Interactions</h2>
       <button id="feedPlankBtn">Feed a Jawbreaker</button>
@@ -43,25 +34,21 @@
       <p id="feedbackMsg"></p>
     </section>
 
-    <!-- Minigames or “Scams” Section -->
     <section id="minigames">
       <h2>Run a Scam</h2>
       <p>Help Plankster pull off a wacky scheme for extra tokens!</p>
-      <!-- Placeholder for minigame UI -->
       <button id="startScamBtn">Start Scam</button>
       <div id="scamGameArea" style="display: none;">
-        <!-- This is where the minigame or puzzle interface could appear -->
         <p>Minigame content goes here...</p>
       </div>
     </section>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Plankster. All rights reserved. Meme responsibly.</p>
   </footer>
 
-  <!-- Your main JS file -->
-  <script type="module" src="/app.js"></script>
+  <!-- Belangrijk: "type=module" inschakelen voor ES modules! -->
+  <script type="module" src="main.js"></script>
 </body>
 </html>
