--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
   </div>
   
   <!-- Main JS -->
-  <script type="module" src="app.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
