--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <!-- 3D Container -->
-  <div id="three-container" style="width: 800px; height: 600px; margin: auto;"></div>
+  <div id="three-container"></div>
   
   <!-- Interaction Buttons -->
   <div style="text-align:center; margin-top:1rem;">
